Fix restore akonadi backup Thanks for the patch phoenix_firebrd!

BUG: 279145
FIXED-IN: 4.8.4
MERGE: 4.8